--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -27,7 +27,7 @@
     <button type="button" id="btn3" (click)="boton3()">Usuario 3</button>
     <div>
       ¿No tienes una cuenta?
-      <a href="/registro">Regístrate aquí</a>
+      <a routerLink="/registro">Regístrate aquí</a>
     </div>
   </form>
 </div>
