--- a/src/app/registro/registro.html
+++ b/src/app/registro/registro.html
@@ -31,7 +31,7 @@
     </div>
     <div>
       ¿Ya tienes una cuenta?
-      <a href="/login">Inicia sesión</a>
+      <a routerLink="/login">Inicia sesión</a>
     </div>
   </form>
 </div>
